src/main/java/org/example/bank/_core/errors/exceptions/Exception500.java
package org.example.bank._core.errors.exceptions;

public class Exception500 extends RuntimeException{

    public Exception500(String msg) {
        super(msg);
    }
}